--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,34 @@
 buildscript {
-	repositories {
-		mavenCentral()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.0.RELEASE")
-	}
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.0.RELEASE")
+    }
 }
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 bootJar {
-	baseName = 'demo_h2'
-	version =  '0.1.0'
+    baseName = 'gs-spring-boot'
+    version =  '0.1.0'
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-	compile("org.springframework.boot:spring-boot-starter-web")
-	compile("com.h2database:h2:1.4.196")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-test")
 
-	testCompile("junit:junit")
+    compile("com.h2database:h2:1.4.196")
+    testCompile("junit:junit")
 }
