--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-test")
     compile("com.h2database:h2:1.4.196")
+
 
     testCompile("junit:junit")
 }
